feat: integrate Radix UI components and enhance layout with Drawer and Layout components

--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,14 @@ body {
 }
 
 .card {
+  
+ 
   /* background-color: #e8ff001c; */
   box-shadow: var(--shadow-3);
   outline: 1px solid var(--accent-8);
-  background: linear-gradient(345deg , #eaff0005, #eaff002a);
+  border-radius: var(--radius-3);
+
+  background: linear-gradient(345deg, #eaff0005, #eaff002a);
 }
 
 .button {
