--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -6,23 +6,21 @@
 
 .footer {
   margin-top: 2rem;
-  border-top: 1px solid var(--accent-9);
+  border-top: 1px solid var(--mui-palette-primary-light);
   /*   background-color: #e8ff001c; */
   text-align: center;
-  color: var(--accent-12);
+  color: var(--mui-palette-primary-light);
   padding: 0.5rem;
 }
 
 .nav {
   /*   background-color: #e8ff001c; */
   text-align: center;
-  color: var(--accent-12);
+  color: var(--mui-palette-primary-light);
   padding: 0.5 0rem;
   box-shadow: inset 0 -1px 0 0 #afb9a8;
 
-  .rt-BaseTabList {
-    box-shadow: inset 0 -1px 0 0 #afb9a8;
-  }
+ 
 }
 
 .nav-row {
