feat: enhance API and type definitions for pedidos with search parameters and complete schema

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@ body {
   margin: 0;
 }
 
+button {
+  cursor: pointer;
+}
+
 .gradientBackground {
   background: linear-gradient(345deg, #eaff0005, #eaff0010);
 }
